styles/base/_base.scss
html {
	font-size: $size-default;
	@media (min-width: $from-tiny) and (max-width: $to-small) {
		font-size: $size-tiny;
	}
	@media (min-width: $from-small) and (max-width: $to-medium) {
		font-size: $size-small;
	}
	@media (min-width: $from-medium) and (max-width: $to-large) {
		font-size: $size-medium;
	}
	@media (min-width: $from-large) and (max-width: $to-big) {
		font-size: $size-large;
	}
	@media (min-width: $from-big) and (max-width: $to-huge) {
		font-size: $size-big;
	}
	@media (min-width: $from-huge) and (max-width: $to-enormous) {
		font-size: $size-huge;
	}
	@media (min-width: $from-enormous) and (max-width: $to-gigantic) {
		font-size: $size-enormous;
	}
	@media (min-width: $from-gigantic) and (max-width: $to-colossal) {
		font-size: $size-gigantic;
	}
	@media (min-width: $from-colossal) {
		font-size: $size-colossal;
	}
}

canvas {
	width: 80vw;
}

body {
	background: $color-bg;
	overscroll-behavior: none;
	color: $color-grey-darker;
	overflow-x: hidden;
	font-family: 'Inter', sans-serif;
}

.container {
	width: 92vw;
	margin-right: auto;
	margin-left: auto;
	@media (min-width: $from-small) {
		width: 80vw;
	}
}

.container-sm {
	width: 92vw;
	margin-right: auto;
	margin-left: auto;
	@media (min-width: $from-small) {
		width: 58vw;
	}
	hr {
		border: 0.5px solid $color-grey;
		margin: rem(8);
	}
}

.container-xs {
	width: 72vw;
	margin-right: auto;
	margin-left: auto;
	@media (min-width: $from-small) {
		width: 50vw;
	}
}

header,
section {
	margin: rem(12) 0 rem(6);
	@media (min-width: $from-small) {
		margin: rem(10) 0;
	}
	@media (min-width: $from-big) {
		margin: rem(14) 0;
	}
}

section {
	margin: rem(8) 0;
	scroll-margin-top: rem(4);
	@media (min-width: $from-small) {
		margin: rem(12) 0;
		scroll-margin-top: rem(12);
	}
	@media (min-width: $from-big) {
		margin: rem(18) 0;
		scroll-margin-top: rem(18);
	}
}

::-webkit-scrollbar {
	width: 4px;
	height: 4px;
}

::-webkit-scrollbar-thumb {
	background: $color-grey-dark;
}

// ::-moz-selection {
// 	color: $color-white;
// 	background: $color-primary;
// }

// ::selection {
// 	color: $color-grey-darker;
// 	background: $color-primary;
// }

.Placeholder {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	width: 100%;
	aspect-ratio: 16/8;
}

.ScrollScene,
.ViewportScrollScene {
	// outline: 1px dashed rgba(255, 255, 255, 0.33);
	position: relative;
}

#ScrollRig-canvas {
	z-index: -1;
}

